--- a/frontend/index.html
+++ b/frontend/index.html
@@ -135,7 +135,7 @@
       }
 
       try {
-        const res = await fetch("http://127.0.0.1:3000/login", {
+        const res = await fetch("http:44.229.227.14254.188.71.9452.13.128.108", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ email, parol })
