--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,7 @@
           </div>
           <div class="auth-switch">
             <button class="showSignin" style="margin-left: -225px;">Sign In</button>
+            <span id="status" class="status-text">Siz Sign In qismidasiz</span>
           </div>
           <input id="account" type="text" placeholder="Email">
           <input id="parol" type="password" placeholder="Parol">
@@ -36,6 +37,7 @@
           </div>
           <div class="auth-switch">
             <button class="showSignin" style="margin-left: -225px;">Sign In</button>
+            <span id="status" class="status-text">Siz Sign In qismidasiz</span>
           </div>
           <input id="name" type="text" placeholder="Ism">
           <input id="surname" type="text" placeholder="Familiya (majburiy emass!)">
@@ -62,6 +64,7 @@
           </div>
           <div class="auth-switch">
             <button class="showSignup" style="margin-left: -225px;">Sign Up</button>
+            <span id="status" class="status-text">Siz Sign Up qismidasiz</span>
           </div>
           <input id="loginEmail" type="text" placeholder="Email">
           <input id="loginParol" type="password" placeholder="Parol">
